[package]
name = "bevy_plot"
version = "0.1.4"
edition = "2021"
authors = ["Eliot Bolduc"]
description = "A Bevy plugin for plotting data and explicit functions."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bevy", "plot", "curve", "graph", "gamedev"]
repository = "https://github.com/eliotbo/bevy_plot"
categories = [
    "visualization", "game-engines", "game-development", "mathematics", "science"
]

[dependencies]
bevy = { version = "0.6.0", default-features = false, features = [ "render", "x11",] }
itertools-num = "0.1"
bytemuck = "1.7"
rand = "0.8"

[features]
default = []
unstable = []

[[example]]
name = "bevy"
path = "examples/bevy.rs"

[[example]]
name = "markers"
path = "examples/markers.rs"

[[example]]
name = "minimal"
path = "examples/minimal.rs"

[[example]]
name = "func"
path = "examples/func.rs"

[[example]]
name = "animate"
path = "examples/animate.rs"

[[example]]
name = "runtime_setter"
path = "examples/runtime_setter.rs"


